# hinge-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: avd.yaml  default.yaml  memu.yaml
scripts/: run_appium.ps1  run_appium.sh
src/hinge_bot/: __init__.py  __main__.py  actions.py  cli.py  config.py  driver.py  selectors.py  utils.py
